; ModuleID = '/home/carl/AnghaBench/redcarpet/ext/redcarpet/extr_markdown.c_create_footnote_ref.c'
source_filename = "/home/carl/AnghaBench/redcarpet/ext/redcarpet/extr_markdown.c_create_footnote_ref.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.footnote_ref = type { i32 }
%struct.footnote_list = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.footnote_ref* (%struct.footnote_list*, i32*, i64)* @create_footnote_ref to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.footnote_ref* @create_footnote_ref(%struct.footnote_list* %0, i32* %1, i64 %2) #0 {
  %4 = alloca %struct.footnote_ref*, align 8
  %5 = alloca %struct.footnote_list*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i64, align 8
  %8 = alloca %struct.footnote_ref*, align 8
  store %struct.footnote_list* %0, %struct.footnote_list** %5, align 8
  store i32* %1, i32** %6, align 8
  store i64 %2, i64* %7, align 8
  %9 = call %struct.footnote_ref* @calloc(i32 1, i32 4)
  store %struct.footnote_ref* %9, %struct.footnote_ref** %8, align 8
  %10 = load %struct.footnote_ref*, %struct.footnote_ref** %8, align 8
  %11 = icmp ne %struct.footnote_ref* %10, null
  br i1 %11, label %13, label %12

12:                                               ; preds = %3
  store %struct.footnote_ref* null, %struct.footnote_ref** %4, align 8
  br label %20

13:                                               ; preds = %3
  %14 = load i32*, i32** %6, align 8
  %15 = load i64, i64* %7, align 8
  %16 = call i32 @hash_link_ref(i32* %14, i64 %15)
  %17 = load %struct.footnote_ref*, %struct.footnote_ref** %8, align 8
  %18 = getelementptr inbounds %struct.footnote_ref, %struct.footnote_ref* %17, i32 0, i32 0
  store i32 %16, i32* %18, align 4
  %19 = load %struct.footnote_ref*, %struct.footnote_ref** %8, align 8
  store %struct.footnote_ref* %19, %struct.footnote_ref** %4, align 8
  br label %20

20:                                               ; preds = %13, %12
  %21 = load %struct.footnote_ref*, %struct.footnote_ref** %4, align 8
  ret %struct.footnote_ref* %21
}

declare dso_local %struct.footnote_ref* @calloc(i32, i32) #1

declare dso_local i32 @hash_link_ref(i32*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
